--- a/css/all.css
+++ b/css/all.css
@@ -111,4 +111,11 @@ li{
     
     overflow: auto;
 }
+.re{
+    width:180px;
+    padding:8px;
+    background-color:rgb(33, 58, 33);
+    color:white;
+    font-size:18px;
+}
 
